
name:                p2p-server
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable p2p-server
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       bytestring,
                       text,
                       stm-conduit,
                       stm,
                       containers,
                       word8,
                       async,
                       ethereum-data-sql,
                       persistent-postgresql,                   
                       resourcet,
                       monads-tf,
                       monad-logger,
                       transformers,
                       persistent,
                       persistent-template,
                       esqueleto,
                       time,
                       ethereum-merkle-patricia-db,
                       ethereum-rlp,
                       ethereum-util,
                       p2p-server,
                       base16-bytestring,
                       ethereum-client-haskell,
                       ethereum-encryption,
                       binary,
                       binary-conduit,
                       cipher-aes,
                       cryptohash,
                       network,
                       haskoin,
                       entropy,
                       crypto-pubkey, 
                       crypto-pubkey-types,
                       crypto-random,
                       nibblestring,
                       vector,
                       IfElse,
                       postgresql-simple,
                       split,
                       stm-chans
  ghc-options:         -Wall -O2 
  hs-source-dirs: exec_src
  default-language: Haskell2010      
  
  
library
  build-depends:       base >=4.7 && <4.8,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       bytestring,
                       text,
                       stm-conduit,
                       stm,
                       containers,
                       word8,
                       async,
                       ethereum-data-sql,
                       persistent-postgresql,                   
                       resourcet,
                       monads-tf,
                       monad-logger,
                       transformers,
                       persistent,
                       persistent-template,
                       esqueleto,
                       time,
                       ethereum-merkle-patricia-db,
                       ethereum-rlp,
                       ethereum-util,
                       base16-bytestring,
                       ethereum-client-haskell,
                       ethereum-encryption,
                       binary,
                       binary-conduit,
                       cipher-aes,
                       cryptohash,
                       network,
                       haskoin,
                       entropy,
                       crypto-pubkey, 
                       crypto-pubkey-types,
                       crypto-random,
                       nibblestring,
                       vector,
                       IfElse,
                       postgresql-simple,
                       split,
                       stm-chans

  exposed-modules:
                   Blockchain.CommunicationConduit,
                   Blockchain.ContextLite,
                   Blockchain.BlockSynchronizerSql,
                   Blockchain.TCPServer
  hs-source-dirs:      src
  default-language:    Haskell2010

        
	