
name:                strato-p2p-server
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable strato-p2p-server
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       bytestring,
                       text,
                       stm-conduit,
                       stm,
                       containers,
                       word8,
                       lifted-async,
                       blockapps-data,
                       persistent-postgresql,                   
                       resourcet,
                       monads-tf,
                       monad-logger,
                       transformers,
                       persistent,
                       persistent-template,
                       esqueleto,
                       time,
                       merkle-patricia-db,
                       ethereum-rlp,
                       ethereum-util,
                       strato-p2p-server,
                       base16-bytestring,
                       strato-p2p-client,
                       ethereum-encryption,
                       binary,
                       binary-conduit,
                       cipher-aes,
                       cryptohash,
                       network,
                       haskoin,
                       entropy,
                       crypto-pubkey, 
                       crypto-pubkey-types,
                       crypto-random,
                       nibblestring,
                       vector,
                       IfElse,
                       postgresql-simple,
                       split,
                       stm-chans,
                       hflags,
                       lifted-base

  ghc-options:         -Wall -O2 
  hs-source-dirs: exec_src
  default-language: Haskell2010      
  
  
library
  build-depends:       base,
                       blockapps-data,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       bytestring,
                       text,
                       stm-conduit,
                       stm,
                       containers,
                       word8,
                       lifted-async,
                       strato-p2p-client,
                       persistent-postgresql,                   
                       resourcet,
                       monads-tf,
                       monad-logger,
                       transformers,
                       persistent,
                       persistent-template,
                       esqueleto,
                       time,
                       merkle-patricia-db,
                       ethereum-rlp,
                       ethereum-util,
                       base16-bytestring,
                       strato-p2p-client,
                       ethereum-encryption,
                       binary,
                       binary-conduit,
                       cipher-aes,
                       cryptohash,
                       network,
                       haskoin,
                       entropy,
                       crypto-pubkey, 
                       crypto-pubkey-types,
                       crypto-random,
                       nibblestring,
                       vector,
                       IfElse,
                       postgresql-simple,
                       split,
                       stm-chans,
                       hflags,
                       lifted-base
  exposed-modules:
                   Blockchain.CommunicationConduit,
                   Blockchain.ContextLite,
                   Blockchain.BlockSynchronizerSql,
                   Blockchain.TCPServer,
                   Blockchain.UDPServer,
                   Blockchain.P2PUtil,
                   Blockchain.TriggerNotify,
                   Blockchain.TCPClient                    
  hs-source-dirs:      src
  default-language:    Haskell2010

        
	